3.0
===

Dropped support for Python 2.

2.0
===

Removed proxy config on Server added in 1.9. All users may disregard this
backward-incompatibility.