@@ -1,10 +1,19 @@
-<%inherit file="base.html"/>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:py="http://genshi.edgewall.org/"
+	xmlns:xi="http://www.w3.org/2001/XInclude">
 
+<xi:include href="base" />
+
+<head/>
+
+<body>
 <div class="about">
 	<p>Library Paste (version ${version}) is an <a href="https://pypi.python.org/pypi/librarypaste">open source</a> library paste engine; you're using an example of it right now! It was originally created by Jamie Turner, and modified and open sourced by Chris Mulligan.,</p>
 	<p>Using Library Paste is really simple - it can do just a couple things. You can upload text/code/files, and you can view them. Each paste is identified by a UUID; or optionally by a 5 character short code. Just copy the URL you have and share it with whomever you want. You can view pastes simply by appending the paste ID (either one) to the main URL.</p>
 	<p>Library Paste can also take files and share them. It will attempt to serve back the files with whatever MIME type they were uploaded with - so if you attach a picture it will come through as a picture. Although it has a long URL, if you try to download the file or save it, the original URL will come through. Right now there are no explicit limits on file size, however the web server and/or client may enforce some.</p>
 	<p>Library Paste has a companion library <a href="https://pypi.python.org/pypi/lpaste">lpaste</a>, which implements a command-line client and Mac OS X App.Install using <pre>pip install lpaste</pre></p>.
-	<p>One "hidden" feature is that you can find the last paste by a given nickname. You simple to go the url last/$username and you'll get redirected to their most recent paste, or given a 404 if it's not found. This endpoint is useful for IRC bots to locate a user's paste by IRC nickname.</p>
+	<p>One "hidden" feature is that you can find the last paste by a given nickname. You simple to go the url last/{username} and you'll get redirected to their most recent paste, or given a 404 if it's not found. This endpoint is useful for IRC bots to locate a user's paste by IRC nickname.</p>
 	<p>If you'd like your own, Library Paste is easy to setup. It's written in python using cherrypy, you can download the code from the home page. If you have any feedback, questions, or comments, please file tickets with the project.</p>
 </div>
+</body>
+</html>
