@@ -1,26 +1,29 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
-		<title>${title}</title>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	  xmlns:py="http://genshi.edgewall.org/"
+	  xmlns:xi="http://www.w3.org/2001/XInclude"
+	  py:strip="">
+
+	<head py:match="head" py:attrs="select('@*')">
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<title py:content="title">Title goes here</title>
+		<meta py:replace="select('*')" />
 		<link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon"/>
 		<link rel="icon" href="/static/favicon.ico" type="image/x-icon"/>
         <link rel="stylesheet" href="/static/base.css" type="text/css"/>
         <link rel="stylesheet" href="/static/pygments.css" type="text/css"/>
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 	</head>
-	<body>
+	<body py:match="body" py:attrs="select('@*')">
 		<div class="header">
 			<a href="/">
 				<img class="logo" src="${logo_src}" alt="${brand_name} Paste" />
 				${brand_name} Paste</a>
 			| <a href="/about">About</a>
 		</div>
-	<div class="main">
-
-	${self.body()}
-
-	</div>
+		<div class="main">
+			<div py:replace="select('*|text()')" />
+		</div>
 	</body>
 </html>
