@@ -1,5 +1,13 @@
-<%inherit file="base.html"/>
+<html xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:py="http://genshi.edgewall.org/"
+    xmlns:xi="http://www.w3.org/2001/XInclude">
 
-<p>Since your paste isn't an image we won't redirect you. Here's a link: <br/>
-<a href="${link}">${link}</a>
-</p>
+<xi:include href="base" />
+
+<head/>
+
+<body>
+	<p>Since your paste isn't an image we won't redirect you. Here's a link:</p>
+	<p><a href="${link}" py:content="link" /></p>
+</body>
+</html>
