@@ -1,20 +1,31 @@
-<%inherit file="base.html"/>
+<html xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:py="http://genshi.edgewall.org/"
+    xmlns:xi="http://www.w3.org/2001/XInclude">
 
-<p>${title}
-<br/ > <a href="${plainurl}">(Plain Text)</a>
-<a href="#wrap" id="wrapbtn">(Wrap Lines)</a>
-<script>
-    $('a#wrapbtn').toggle(function() {
-        $("td.linenos").toggle();
-        $("td.code pre").toggleClass("wrap");
-        $("a#wrapbtn").text("(Unwrap Lines)");
-    }, function() {
-        $("td.linenos").toggle();
-        $("td.code pre").toggleClass("wrap");
-        $("a#wrapbtn").text("(Wrap Lines)");
-    });
-</script>
+<xi:include href="base" />
 
-</p>
-<div style="clear: both;"></div>
-${code}
+<head/>
+
+<body>
+    <p>
+        <span py:content="title" py:strip="" />
+        <br/>
+        <a href="${plainurl}">(Plain Text)</a>
+        <a href="#wrap" id="wrapbtn">(Wrap Lines)</a>
+        <script>
+            $('a#wrapbtn').toggle(function() {
+                $("td.linenos").toggle();
+                $("td.code pre").toggleClass("wrap");
+                $("a#wrapbtn").text("(Unwrap Lines)");
+            }, function() {
+                $("td.linenos").toggle();
+                $("td.code pre").toggleClass("wrap");
+                $("a#wrapbtn").text("(Wrap Lines)");
+            });
+        </script>
+
+    </p>
+    <div style="clear: both;" />
+    <div py:content="code" py:strip="" />
+</body>
+</html>
