@@ -2,6 +2,7 @@
 ===
 
 Dropped support for Python 2.
+Replaced Mako templates with Genshi templates.
 
 2.0
 ===
